--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_core:
   firebase_messaging:
   flutter_local_notifications:
+  path_provider:
+  http_parser:
 
 
   # The following adds the Cupertino Icons font to your application.
