--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_launcher_icons: ^0.14.2
   flutter_native_splash: ^2.4.1
+  geolocator: ^9.0.0
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   flutter_test:
