--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter_native_splash: ^2.4.1
   geolocator: ^9.0.0
   permission_handler: ^10.0.0
+  cached_network_image:
+  photo_view:
 
 dev_dependencies:
   flutter_test:
