--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_local_notifications: ^17.2.1
   path_provider:
   google_places_flutter:
+  connectivity_plus:
   http_parser:
   cupertino_icons: ^1.0.6
   flutter_launcher_icons: ^0.14.2
